base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: starter-api
spec:
    replicas: 1
    selector:
        matchLabels:
            app: starter-api
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
    minReadySeconds: 5
    template:
        metadata:
            labels:
                app: starter-api
        spec:
            containers:
                - name: starter-api
                  image: gcr.io/PROJECT_ID/IMAGE:TAG
                  ports:
                      - containerPort: 3000
                  resources:
                      requests:
                          cpu: 100m
                      limits:
                          cpu: 100m
