base/service.yml
apiVersion: v1
kind: Service
metadata:
    name: starter-api-service
spec:
    type: NodePort
    ports:
        - port: 80
          targetPort: 3000
    selector:
        app: starter-api
