base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-starter-api
spec:
  rules:
  - host: starter-api.javobal.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: starter-api-service
            port: 
              number: 80
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
